    * lib/hashtable.cc, lib/hashtable.hh: take args to filter_if_present by
    reference, address scope in destructor
    * lib/read_parsers.cc: Added comments to address cppcheck false positives
    * lib/subset.cc, lib/subset.hh: Adjusted output_partitioned_file,
    find_unpart to take args by reference, fix assign_partition_id to use
    .empty() instead of .size()

2014-09-10  Titus Brown  <titus@idyll.org>

    * sandbox/calc-median-distribution.py: catch exceptions generated by reads
	shorter than k in length.
    * sandbox/collect-reads.py: added script to collect reads until specific
	average cutoff.
    * sandbox/slice-reads-by-coverage.py: added script to extract reads with
	a specific coverage slice (based on median k-mer abundance).
	
2014-09-09  Titus Brown  <titus@idyll.org>

    * Added sandbox/README.rst to describe/reference removed files,
	 and document remaining sandbox files.

    * Removed many obsolete sandbox files, including:
      sandbox/abund-ablate-reads.py,
      sandbox/annotate-with-median-count.py,
      sandbox/assemble-individual-partitions.py,
      sandbox/assemstats.py,
      sandbox/assemstats2.py,
      sandbox/bench-graphsize-orig.py,
      sandbox/bench-graphsize-th.py,
      sandbox/bin-reads-by-abundance.py,
      sandbox/bowtie-parser.py,
      sandbox/calc-degree.py,
      sandbox/calc-kmer-partition-counts.py,
      sandbox/calc-kmer-read-abunds.py,
      sandbox/calc-kmer-read-stats.py,
      sandbox/calc-kmer-to-partition-ratio.py,
      sandbox/calc-sequence-entropy.py,
      sandbox/choose-largest-assembly.py,
      sandbox/consume-and-traverse.py,
      sandbox/contig-coverage.py,
      sandbox/count-circum-by-position.py,
      sandbox/count-density-by-position.py,
      sandbox/count-distance-to-volume.py,
      sandbox/count-median-abund-by-partition.py,
      sandbox/count-shared-kmers-btw-assemblies.py,
      sandbox/ctb-iterative-bench-2-old.py,
      sandbox/ctb-iterative-bench.py,