@@ -31,6 +31,12 @@
     find_unpart to take args by reference, fix assign_partition_id to use
     .empty() instead of .size()
 
+2014-09-19  Ben Taylor  <taylo886@msu.edu>
+		
+    * Makefile: Add astyle, format targets
+    * doc/dev/coding-guidelines-and-review.txt: Add reference to `make format`
+		target
+
 2014-09-10  Titus Brown  <titus@idyll.org>
 
     * sandbox/calc-median-distribution.py: catch exceptions generated by reads
